<resources>
    <string name="app_name">BenahApp</string>
    <string name="lang_btn">اللغة العربية</string>
    <string name="quick_earch">Quick Search</string>
    <string name="go">Go</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="cheating_list">Cheatiing List</string>
    <string name="new_session">New Session</string>
    <string name="OCR">OCR</string>
    <string name="translation">Transition</string>
    <string name="academic_years">Academic Years</string>
    <string name="prep_year">Preparatory Year</string>
    <string name="civil">Civil Department</string>
    <string name="archictect">Architecture Department</string>
    <string name="measure">Measuring Department</string>
    <string name="electrical">Electrical Department</string>
    <string name="mechanical">Mechanical Department</string>
    <string name="indutrial">Industrial Department</string>
    <string name="energy">Energy Department</string>
    <string name="emergency">Emergency Numbers</string>
    <string name="mission">Mission and Vision</string>
    <string name="midicine">Faculty of Midicine</string>
    <string name="veterinary">Faculty of Veterinary</string>
    <string name="nursing">Faculty of Nursing</string>
    <string name="science">Faculty of Science</string>
    <string name="education">Faculty of education</string>
    <string name="arts">Faculty of Arts</string>
    <string name="agriculture">Faculty of Agriculture</string>
    <string name="physical">Faculty of Physical Education</string>
    <string name="law">Faculty of Law</string>
    <string name="shoubra">Shoubra Faculty of engineering</string>
    <string name="tech">Faculty of Information and Technology</string>
    <string name="engineer">Benha Faculty of Engineering</string>
    <string name="applied">Faculty of Applied Arts</string>
    <string name="specific">Faculty of Specific Education</string>
    <string name="important_websites">Important Websites</string>
    <string name="contact">Contact Us</string>
    <string name="top">Top of Page</string>
    <string name="done">Done</string>
    <string name="indoor_navigation">Indoor Navigation</string>
    <string name="deststination">Destination</string>
    <string name="current">Current</string>
    <string name="scan">SCAN it</string>
    <string name="route">Get Route</string>
    <string name="like">like</string>
    <string name="dislike">dislike</string>
    <string name="maps">Maps</string>
    <string name="khalfawy">Khalafawy</string>
    <string name="rod_elfarg">Rod El-Farag</string>
    <string name="Upload">Upload</string>
    <string name="Update">Update</string>
    <string name="Delete">Delete</string>
    <string name="Faculty">Faculty:</string>
    <string name="Department">Department:</string>
    <string name="Staff_name">Staff name:</string>
    <string name="Course">Course:</string>
    <string name="Log_Out">Log Out</string>
    <string name="Notification">Notification</string>
    <string name="Log_In">Log In</string>
    <string name="Course_name">Course Name</string>
    <string name="Clear_Notification">Clear Notification</string>
    <string name="Email">Email:</string>
    <string name="Password">Password:</string>
    <string name="Job">Job:</string>
    <string name="sign_up">Sign Up</string>
    <string name="Browse">Browse</string>
    <string name="CANCEL">Cancel</string>
    <string name="submit">Submit</string>


</resources>
