<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/small_margin"
    android:orientation="vertical"
    android:background="@color/backColor"
    android:padding="0dp">


    <TextView
        android:id="@+id/map_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:ellipsize="marquee"
        android:textSize="25sp"
        android:text="@string/maps"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />


<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/map_title"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context="com.example.dell.benahapp.maps.mapMain"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:paddingLeft="@dimen/small_margin"
        android:paddingRight="@dimen/small_margin"
        android:paddingTop="@dimen/small_margin"
        android:paddingBottom="@dimen/small_margin"
        >
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="217dp"
                android:layout_height="wrap_content"
                android:text="@string/midicine"
                android:layout_marginBottom="@dimen/small_margin"
                android:background="@drawable/draw"
                android:textSize="@dimen/text_mid"
                android:textColor="@color/textColor"
                android:onClick="openMaps"
                />

            <ImageView
                android:layout_width="@dimen/extra_margin"
                android:layout_height="@dimen/extra_margin"
                android:layout_marginLeft="@dimen/small_margin"
                android:background="@drawable/medicine"
                />
        </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <Button
            android:layout_width="219dp"
            android:layout_height="wrap_content"
            android:text="@string/veterinary"
            android:layout_marginBottom="@dimen/small_margin"
            android:background="@drawable/draw"
        android:textSize="@dimen/text_mid"
        android:textColor="@color/textColor"
            android:onClick="openMaps"
            />

        <ImageView
            android:layout_width="@dimen/extra_margin"
            android:layout_height="@dimen/extra_margin"
            android:layout_marginLeft="@dimen/small_margin"
            android:background="@drawable/veter"
            />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <Button
            android:layout_width="219dp"
            android:layout_height="wrap_content"
            android:text="@string/nursing"
            android:layout_marginBottom="@dimen/small_margin"
            android:background="@drawable/draw"
        android:textSize="@dimen/text_mid"
        android:textColor="@color/textColor"
            android:onClick="openMaps"/>

        <ImageView
            android:layout_width="@dimen/extra_margin"
            android:layout_height="@dimen/extra_margin"
            android:layout_marginLeft="@dimen/small_margin"
            android:background="@drawable/nurse"
            />

    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <Button
            android:layout_width="219dp"
            android:layout_height="wrap_content"
            android:text="@string/science"
            android:background="@drawable/draw"
            android:textColor="@color/textColor"
        android:textSize="@dimen/text_mid"
        android:layout_marginBottom="@dimen/small_margin"
            android:onClick="openMaps"/>

        <ImageView
            android:layout_width="@dimen/extra_margin"
            android:layout_height="@dimen/extra_margin"
            android:layout_marginLeft="@dimen/small_margin"
            android:background="@drawable/science"
            />

        </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <Button
            android:layout_width="219dp"
            android:layout_height="wrap_content"
            android:text="@string/education"
            android:background="@drawable/draw"
            android:textColor="@color/textColor"
            android:layout_marginBottom="@dimen/small_margin"
        android:textSize="@dimen/text_mid"
        android:onClick="openMaps"/>
        <ImageView
            android:layout_width="@dimen/extra_margin"
            android:layout_height="@dimen/extra_margin"
            android:layout_marginLeft="@dimen/small_margin"
            android:background="@drawable/edu"
            />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <Button
            android:layout_width="219dp"
            android:layout_height="wrap_content"
            android:text="@string/arts"
            android:background="@drawable/draw"
            android:textColor="@color/textColor"
        android:textSize="@dimen/text_mid"
        android:layout_marginBottom="@dimen/small_margin"
            android:onClick="openMaps"/>
        <ImageView
            android:layout_width="@dimen/extra_margin"
            android:layout_height="@dimen/extra_margin"
            android:layout_marginLeft="@dimen/small_margin"
            android:background="@drawable/art"
            />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <Button
            android:layout_width="219dp"
            android:layout_height="wrap_content"
            android:text="@string/agriculture"
            android:background="@drawable/draw"
            android:textColor="@color/textColor"
        android:textSize="@dimen/text_mid"
        android:layout_marginBottom="@dimen/small_margin"
            android:onClick="openMaps"
            />
        <ImageView
            android:layout_width="@dimen/extra_margin"
            android:layout_height="@dimen/extra_margin"
            android:layout_marginLeft="@dimen/small_margin"
            android:background="@drawable/art"
            />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <Button
            android:layout_width="219dp"
            android:layout_height="wrap_content"
            android:text="@string/physical"
            android:background="@drawable/draw"
            android:textColor="@color/textColor"
        android:textSize="@dimen/text_mid"
        android:layout_marginBottom="@dimen/small_margin"
            android:onClick="openMaps"/>

        <ImageView
            android:layout_width="@dimen/extra_margin"
            android:layout_height="@dimen/extra_margin"
            android:layout_marginLeft="@dimen/small_margin"
            android:background="@drawable/phy"
            />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <Button
        android:layout_width="219dp"
        android:layout_height="wrap_content"
            android:text="@string/law"
            android:background="@drawable/draw"
            android:textColor="@color/textColor"
        android:textSize="@dimen/text_mid"
        android:layout_marginBottom="10dp"
            android:onClick="openMaps"
        android:width="219dp" />

        <ImageView
            android:layout_width="@dimen/extra_margin"
            android:layout_height="@dimen/extra_margin"
            android:layout_marginLeft="@dimen/small_margin"
            android:background="@drawable/low"
            />
        </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <Button
        android:layout_width="219dp"
        android:layout_height="wrap_content"
            android:text="@string/shoubra"
            android:background="@drawable/draw"
            android:textColor="@color/textColor"
            android:layout_marginBottom="@dimen/small_margin"
            android:id="@+id/shoubra"
        android:textSize="@dimen/text_mid"
        android:onClick="showBranch"
        android:width="219dp" />

        <ImageView
            android:layout_width="@dimen/extra_margin"
            android:layout_height="@dimen/extra_margin"
            android:layout_marginLeft="@dimen/small_margin"
            android:background="@drawable/shoubra"
            />
    </LinearLayout>


    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/branch"
            android:visibility="gone"
            android:layout_marginBottom="@dimen/small_margin">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/khalfawy"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="@dimen/margin"
                android:background="@drawable/draw"
                android:textSize="@dimen/text_mid"
                android:textColor="@color/textColor"
                android:onClick="k"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/rod_elfarg"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/margin"
                android:background="@drawable/draw"
                android:textSize="@dimen/text_mid"
                android:textColor="@color/textColor"
                android:onClick="r"/>


        </RelativeLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <Button
        android:layout_width="219dp"
        android:layout_height="wrap_content"
            android:text="@string/tech"
            android:layout_marginBottom="10dp"
            android:background="@drawable/draw"
        android:textSize="@dimen/text_mid"
        android:textColor="@color/textColor"
            android:onClick="openMaps"
        android:width="219dp" />
        <ImageView
            android:layout_width="@dimen/extra_margin"
            android:layout_height="@dimen/extra_margin"
            android:layout_marginLeft="@dimen/small_margin"
            android:background="@drawable/computer"
            />
    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <Button
        android:layout_width="219dp"
        android:layout_height="wrap_content"
            android:text="@string/engineer"
            android:layout_marginBottom="@dimen/small_margin"
            android:background="@drawable/draw"
            android:textColor="@color/textColor"
        android:textSize="@dimen/text_mid"
        android:onClick="openMaps"
        android:width="219dp" />

        <ImageView
            android:layout_width="@dimen/extra_margin"
            android:layout_height="@dimen/extra_margin"
            android:layout_marginLeft="@dimen/small_margin"
            android:background="@drawable/benha_eng"
            />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <Button
        android:layout_width="219dp"
        android:layout_height="wrap_content"
            android:text="@string/applied"
            android:layout_marginBottom="@dimen/small_margin"
            android:background="@drawable/draw"
            android:textColor="@color/textColor"
        android:textSize="@dimen/text_mid"
        android:onClick="openMaps"
        android:width="219dp" />

        <ImageView
            android:layout_width="@dimen/extra_margin"
            android:layout_height="@dimen/extra_margin"
            android:layout_marginLeft="@dimen/small_margin"
            android:background="@drawable/art"
            />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <Button
        android:layout_width="219dp"
        android:layout_height="wrap_content"
            android:text="@string/specific"
            android:background="@drawable/draw"
            android:textColor="@color/textColor"
        android:textSize="@dimen/text_mid"
        android:onClick="openMaps"
        android:width="219dp" />
        <ImageView
            android:layout_width="@dimen/extra_margin"
            android:layout_height="@dimen/extra_margin"
            android:layout_marginLeft="@dimen/small_margin"
            android:background="@drawable/spec"
            />
        </LinearLayout>

    </LinearLayout>




</ScrollView>

</RelativeLayout>
